--- a/styles.css
+++ b/styles.css
@@ -22,19 +22,22 @@ body {
     text-align: center;
 }
 
+main h1 {
+    display: none;
+}
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--color-accent1);
-    color: var(--color-main);
+    color: var(--color-accent1);
     padding: .5rem;
+    font-size: 1.5rem;
 }
 
 nav a{
-    color: var(--color-main);
-    text-shadow: #f5f5f5;
+    color: var(--color-secondary);
+    font-size: 1.2REM;
     text-decoration: none;    
 }
 
@@ -59,14 +62,15 @@ h1, h1, h3 {
 }
 
 
+
+
 .slide {
     display: flex;
     justify-self: center;
     height: 500px;
     width: auto;
     overflow-x: auto;
-    max-width: 97%;
-    border-radius: 10px;
+    max-width: 100%;
 }
 
 /*Slide de talleres*/
@@ -78,6 +82,7 @@ h1, h1, h3 {
     width: auto;
     overflow-x: auto;
     max-width: 97%;
+    height: auto;
 }
 
 .slidetalleres img {
